<resources>
    <string name="app_name">FragmentsLab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_redbutton">Red Fragment</string>
    <string name="first_greenbutton">Green Fragment</string>
    <string name="first_bluebutton">Blue Fragment</string>
    <string name="first_uwpurplebutton">UW Purple Fragment</string>
    <string name="first_uwgoldbutton">UW Gold Fragment</string>
    <string name="color_label">Color</string>
    <string name="all_color_key">key</string>
</resources>
